@@ -844,31 +844,13 @@ bool Map::test_collision_with_ground(
     break;
 
   case Ground::LOW_WALL:
-    on_obstacle = entity_to_check.is_low_wall_obstacle();
-    break;
-
   case Ground::SHALLOW_WATER:
-    on_obstacle = entity_to_check.is_shallow_water_obstacle();
-    break;
-
   case Ground::DEEP_WATER:
-    on_obstacle = entity_to_check.is_deep_water_obstacle();
-    break;
-
   case Ground::HOLE:
-    on_obstacle = entity_to_check.is_hole_obstacle();
-    break;
-
   case Ground::LAVA:
-    on_obstacle = entity_to_check.is_lava_obstacle();
-    break;
-
   case Ground::PRICKLE:
-    on_obstacle = entity_to_check.is_prickle_obstacle();
-    break;
-
   case Ground::LADDER:
-    on_obstacle = entity_to_check.is_ladder_obstacle();
+    on_obstacle = entity_to_check.is_ground_obstacle(ground);
     break;
   }
 
