@@ -1,0 +1,44 @@
+properties{
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  tileset = "castle",
+}
+
+tile{
+  layer = 0,
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  pattern = "3",
+}
+
+dynamic_tile{
+  layer = 0,
+  x = 8,
+  y = 16,
+  pattern = "47",
+  width = 32,
+  height = 24,
+  enabled_at_start = true,
+}
+
+dynamic_tile{
+  layer = 0,
+  x = 16,
+  y = 8,
+  pattern = "67",
+  width = 32,
+  height = 32,
+  enabled_at_start = true,
+}
+
+destination{
+  layer = 0,
+  x = 32,
+  y = 29,
+  direction = 1,
+}
+
